samples/_failures_safe/1761273717_f1942d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_675c3f03.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_675c3f03.c:141:5: error: expected expression at end of input
  141 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_675c3f03.c:141:5: error: expected declaration or statement at end of input
